<resources>
    <string name="app_name">News application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a">All news in one place, be the first to know last news</string>
    <string name="b">Select your favourite topics</string>
    <string name="c">Select some of your favorite topics to let us suggest better news for you.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="d">The latest situation in the presidential election</string>
    <string name="e">Leads in individual states may change from one party to another as all the votes are counted. Select a state for detailed results, and select the Senate, House or Governor tabs to view those races. For more detailed state results click on the States A-Z links at the bottom of this page. Results source: NEP/Edison via Reuters. Leads in individual states may change from one party to another as all the votes are counted. Select a state for detailed results, and select the Senate, House or Governor tabs to view those races. For more detailed state results click on the States A-Z links at the bottom of this page. Results source: NEP/Edison via Reuters.</string>
    <string name="f">The latest situation in the presidential election</string>
    <string name="g">A Simple Trick For Creating Color Palettes Quickly</string>
    <string name="h">You haven\'t saved any articles yet. Start reading and bookmarking them now</string>


    <string name="browse">Browse</string>
    <string name="next">Next</string>
    <string name="category">Category</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="result">Result</string>
    <string name="dis">Discover things of this world</string>
    <string name="th">Thousands of articles in each category</string>
    <string name="mode">Light mode</string>
    <string name="dark">Dark mode</string>
    <string name="language">Languages</string>
    <string name="uz">Uzbek</string>
    <string name="en">English</string>
    <string name="ru">Russian</string>
    <string name="saved">Saved articles to the library</string>
    <string name="recommended">Recommended</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>

</resources>