<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainFragments.LanguageFragment">

   <ImageView
       android:layout_width="20dp"
       android:layout_height="20dp"
       android:id="@+id/back"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       android:layout_margin="20dp"
       android:src="@drawable/back_b"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/titlecolors"
        android:text="@string/language"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintLeft_toRightOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back"
         android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/lang"/>
    <RadioGroup
        android:id="@+id/r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/lang"
        app:layout_constraintLeft_toLeftOf="parent"
       >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uz"
            android:textColor="@color/titlecolors"
            android:textSize="18sp"
            android:id="@+id/uzb"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:textColor="@color/titlecolors"
            android:textSize="18sp"
            android:id="@+id/eng"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ru"
            android:textColor="@color/titlecolors"
            android:textSize="18sp"
            android:id="@+id/ru"/>

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>