<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_info_scene"
    tools:context=".mainFragments.InfoFragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:scaleType="fitXY"
        android:src="@drawable/thirdd"

        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/back"
        android:layout_width="23dp"
        android:layout_height="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/back_button"
        app:altSrc="@drawable/back_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.like.LikeButton
        android:id="@+id/save"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        app:icon_size="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:like_drawable="@drawable/lik"
        app:unlike_drawable="@drawable/s_white" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/share"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="17dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/share_button"
        app:altSrc="@drawable/share_black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save" />

    <TextView
        android:id="@+id/singletitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/back_tv"
        android:padding="10dp"
        android:text="US Election"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/d"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/back_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#333647"
                    android:text="@string/e"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>